вторые правки вендора

--- a/index.html
+++ b/index.html
@@ -60,8 +60,14 @@
                 <p class="intro__description">
                     Легендарная британская компания KEF вот уже почти 60 лет разрабатывает и производит одни из самых оригинальных акустических систем. При этом последние 30 лет они снабжаются уникальными коаксиальными динамиками Uni-Q. Серия Q в ассортименте KEF - одна из самых доступных, тем не менее, на ее базе можно собрать и бескомпромиссную стереосистему и полноценный домашний кинотеатр, даже с поддержкой иммерсивных аудиоформатов. А встраиваемые колонки обеспечат как качественное звучание, так и полную интеграцию в интерьер любого помещения. 
                 </p>
+                <h2 class="intro__links-title">
+                    Представленный Ассортимент моделей KEF со скидкой
+                </h2>
                 <div class="intro__links">
                      <ul class="intro__links-list">
+                        <li class="intro__link-elem">
+                            <a href="#wireless" class="intro__link">Беспроводная акустика</a>
+                         </li>
                          <li class="intro__link-elem">
                             <a href="#floor" class="intro__link">Напольная акустика</a>
                          </li>
@@ -81,9 +87,6 @@
                             <a href="#built-in" class="intro__link">Встраиваемая акустика</a>
                          </li>
                          <li class="intro__link-elem">
-                            <a href="#wireless" class="intro__link">Беспроводная акустика</a>
-                         </li>
-                         <li class="intro__link-elem">
                             <a href="#wall" class="intro__link">Настенная акустика</a>
                          </li>
                          <li class="intro__link-elem">
@@ -94,10 +97,8 @@
             </section>
     
             <section class="video-container">
-                <iframe class="video" src="https://www.youtube.com/embed/rBMBbhrf-4o" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="video" src="https://www.youtube.com/embed/rBMBbhrf-4o?rel=0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </section>
-
-
 
             <section class="goods" id="wireless">
                 <h2 class="title">
@@ -156,8 +157,10 @@
             </section>
 
             <section class="video-container">
-                <iframe class="video" src="https://www.youtube.com/embed/uB-Tm_SeD2Y" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="video" src="https://www.youtube.com/embed/uB-Tm_SeD2Y?rel=0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </section>
+
+            
 
             <section class="goods" id="floor">
                 <h2 class="title">
